--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEO Copywriter AI - 离线版</title>
+  <title>SEO Copywriter AI</title>
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- React & ReactDOM (UMD for local execution) -->
@@ -561,4 +561,5 @@
     root.render(<App />);
   </script>
 </body>
+
 </html>
